fixed quick order form upload button alignment (#31311)

--- a/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/quick-order-import/quick-order-import.scss
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/quick-order-import/quick-order-import.scss
@@ -36,6 +36,11 @@
   &__content {
     margin-bottom: $offset-y-m;
   }
+  
+  &__btn {
+    width: $quick-order-import-button-width;
+    max-width: 100%;
+  }
 
   .filename {
     display: none;
